changed text color because it failed a contrast test, I am aware this changes other text elsewhere. I will correct. removed global from commentary

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -2,7 +2,7 @@
 $page-background-color: #fafafa;
 $header-font-color: #8a8f99;
 $lead-font-color: #637282;
-$font-color: #a4aebf;
+$font-color: #82909c;
 $border-color: #e6edef;
 $element-background: #f3f5f6;
 $font-inverse-color: #f7f8f9;
