--- a/src/styles/taskreview/_flag-commentary.scss
+++ b/src/styles/taskreview/_flag-commentary.scss
@@ -1,5 +1,3 @@
-$font-color: #a4aebf;
-$brand-neutral-colors: (#308253, #4eb276);
 $timestamp-green: #429664;
 
 $block-class:'flag-commentary';
